gobmkida/g2/topological_eye
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/topological_eye/src/engine/optics.c:1998:12: error: expected expression
*( _OWORD *)attack_values = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/topological_eye/src/engine/optics.c:1998:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)attack_values = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/topological_eye/src/engine/optics.c:1999:12: error: expected expression
*( _OWORD *)defense_values = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/topological_eye/src/engine/optics.c:1999:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)defense_values = 0LL; 
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/topological_eye/src/obj/1/optics.o] Error 1
